# paralela

./: Makefile  README.md  Resultados.txt  asd.cpp  reduccion4k.cu  script.sh
CUDA/: matrix.cu  pi-parcial.cu  pi.cu
CUDA/reduccion1080/: CMakeLists.txt  reduccion1080.cu
CUDA/reduccion4k/: CMakeLists.txt  reduccion4k.cu
CUDA/reduccion720/: CMakeLists.txt  reduccion720.cu
MPI/: mpi.txt  mpi_bcast-test  mpi_gather-test  mpi_scatter-test  mpi_scatter-test.c  mpi_test  mpi_test.c
MPI/Examples/: mpi_bcast-test.c  mpi_gather-test.c  mpi_pi  mpi_pi.c
MPI/reduccion1080/: CMakeLists.txt  CmakeLists  mpi_testimg.cpp  mpi_testimg1.c  reduccion108.cpp  reduccion1080.cpp
MPI/reduccion4k/: CMakeLists.txt  reduccion4k.cpp
MPI/reduccion720/: CMakeLists.txt  reduccion720.cpp
OpenMP/: CMakeLists.txt  Resultados.txt  reduccion4k.cpp  reduccionOMP.cpp  resultados1a16hilos.txt
OpenMP/reduccion1080/: CMakeLists.txt  reduccion1080.cpp
OpenMP/reduccion4k/: CMakeLists.txt  reduccion4k.cpp
OpenMP/reduccion720/: CMakeLists.txt  reduccion720.cpp
Pthreads/Taller1/reduccion1080/: reduccion1080.cpp
Pthreads/Taller1/reduccion4k/: reduccion4k.cpp
Pthreads/Taller1/reduccion720/: CMakeLists.txt  reduccion720.cpp
Pthreads/reduccion1080/: reduccion1080.cpp
Pthreads/reduccion4k/: reduccion4k.cpp
Pthreads/reduccion720/: reduccion720.cpp
Pthreads/testing/reduccion1080/: CMakeLists.txt  reduccion1080.cpp
Pthreads/testing/reduccion4k/: CMakeLists.txt  reduccion4k.cpp
Pthreads/testing/reduccion720/: reduccion720.cpp
Secuencial/reduccion1080/: reduccion1080.cpp
Secuencial/reduccion4k/: reduccion4k.cpp
Secuencial/reduccion720/: reduccion720.cpp
Taller1/reduccion1080/: reduccion1080.cpp
Tests/: reduccion1080.cpp  reduccion4k.cpp  reduccion720.cpp
Tests/github/1080/: 1080.sh  CMakeLists.txt
Tests/github/4k/: 4k.sh  CMakeLists.txt
Tests/github/720/: 720.sh  CMakeLists.txt
test/: CMakeLists.txt  f.cpp
test/sad/: f.cpp
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  reduccion  reduccion.cpp  reduccion4k.cpp
testing/reduccion1080/: reduccion1080.cpp
testing/reduccion720/: CMakeLists.txt  reduccion720.cpp
