cmake_minimum_required(VERSION 2.8)
find_package(OpenCV REQUIRED)
find_package(MPI REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${MPI_INCLUDE_DIRS} )
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpicxx)
add_executable( mpimpi reduccion720.cpp )
target_link_libraries(mpimpi ${OpenCV_LIBS})
target_link_libraries(mpimpi ${MPI_LIBRARIES})
