cmake_minimum_required(VERSION 2.8)
project(testing)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( reduccion4k reduccion4k.cpp )
target_link_libraries(reduccion4k ${OpenCV_LIBS})
target_link_libraries(reduccion4k PRIVATE Threads::Threads)